# roscamp-repo-2

./: .gitignore  AGENTS.md  README.md  gitmessage
information_desk/: .gitattributes  CMakeLists.txt  bookSearchImages.qrc  bookinfolocation.cpp  bookinfolocation.h  bookinfolocation.ui  bookloan.cpp  bookloan.h  bookloan.ui  booksearchdialog.cpp  booksearchdialog.h  booksearchdialog.ui  buttonDelegate.cpp  buttonDelegate.h  dobbyloan.cpp  dobbyloan.h  dobbyloan.ui  images.qrc  infodeskmain.cpp  infodeskmain.h  infodeskmain.ui  information_desk_ko_KR.ts  main.cpp  resources.qrc  start_desk_info_ui.txt
information_desk/app/: information_desk
information_desk/images/: resources.qrc
javis/src/javis_interfaces/: CMakeLists.txt  package.xml
javis/src/javis_interfaces/action/: CleanDesk.action  CleanSeat.action  CollectReturnedBooks.action  CollectTrash.action  GuideNavigation.action  GuidePerson.action  MoveToTarget.action  PerformTask.action  PickBook.action  PickupBook.action  PlaceBook.action  RearrangeBook.action  ReshelvingBook.action
javis/src/javis_interfaces/javis_interfaces/: CMakeLists.txt
javis/src/javis_interfaces/javis_interfaces/action/arm/: RearrangeBook.action
javis/src/javis_interfaces/javis_interfaces/action/main/: CleanSeat.action  PickupBook.action
javis/src/javis_interfaces/javis_interfaces/msg/main/: CurrentPose.msg
javis/src/javis_interfaces/msg/: TrackingStatus.msg
javis/src/javis_interfaces/srv/: CheckStorageBox.srv  DetectBook.srv  IdentifyBookShelf.srv  RegisterPerson.srv  VerifyBookPosition.srv
javis_ros2/src/javis_dac/: package.xml  setup.cfg  setup.py
javis_ros2/src/javis_dac/javis_dac/: align_vision.py  align_vision_manager.py  arm_action_server.py.py  aruco_service.py  config.py  dac_all_nodes.py  detecting.py  mc_singleton.py  pick_book_action_server.py  pick_book_action_server_DAC1.py  pick_book_action_server_DAC2.py  place_book_action_server.py  place_book_action_server_DAC1.py  place_book_action_server_DAC2.py  pose_service_server.py  robot_move.py  slot_inventory.py
javis_ros2/src/javis_dac/launch/: dac_all.launch.py
javis_ros2/src/javis_dac/test/: test_pick.py  test_place.py
javis_ros2/src/javis_dmc/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  package.xml  setup.cfg  setup.py
javis_ros2/src/javis_dmc/config/: action_timeouts.yaml  battery_config.yaml  javis_dmc_bt_nodes.xml  library_locations.yaml  mock_method_profiles.yaml  patrol_routes.yaml  test_gui_scenarios.yaml
javis_ros2/src/javis_dmc/docs/: DevelopmentPlan.md  VerificationChecklist.md
javis_ros2/src/javis_dmc/docs/Architecture/: SoftwareArchitecture.md
javis_ros2/src/javis_dmc/docs/DevelopmentPlan/: BEHAVIOR_TREES.md  DMC2_BEHAVIOR_TREE_DESIGN.md  DevelopmentPlan.md  GuidanceFlowRefactor.md  ImplementationChecklist.md  NavWaypointDesign.md  StateIntrospection.md  TEST_GUI_IMPROVEMENTS.md  TEST_GUI_REFACTOR_V2.md  TestGuiDesign.md  TestGuiPlan.md
javis_ros2/src/javis_dmc/docs/InterfaceSpecification/: dac_to_dvs.md  ddc_to_dvs.md  dmc_to_dac.md  dmc_to_ddc.md  dmc_to_dvs.md  gui_to_dmc.md  rcs_to_dmc.md  vrc_to_dmc.md
javis_ros2/src/javis_dmc/docs/SequenceDiagram/: CleningDeskScenario.md  GuidingScenario.md  PickupBookScenario.md  ReshelvingBookScenario.md
javis_ros2/src/javis_dmc/docs/StateDefinition/: StateDefinition.md
javis_ros2/src/javis_dmc/docs/UserGuide/: TestGUI.md
javis_ros2/src/javis_dmc/javis_dmc/: battery_manager.py  dmc_node.py  pick_book_action_client.py
javis_ros2/src/javis_dmc/javis_dmc/interfaces/: __init__.py  ai_interface.py  arm_interface.py  base_interface.py  drive_interface.py  gui_interface.py  llm_interface.py  stt_interface.py  tts_interface.py  voice_recognition_interface.py
javis_ros2/src/javis_dmc/javis_dmc/mock/: __init__.py  mock_ai.py  mock_arm.py  mock_base.py  mock_drive.py  mock_gui.py  mock_llm.py
javis_ros2/src/javis_dmc/javis_dmc/sessions/: __init__.py  destination_session.py  listening_session.py
javis_ros2/src/javis_dmc/javis_dmc/states/: __init__.py  main_states.py  state_enums.py
javis_ros2/src/javis_dmc/javis_dmc/task_executors/: __init__.py  base_executor.py  cleaning_executor.py  guiding_executor.py  pickup_executor.py  reshelving_executor.py  sorting_executor.py
javis_ros2/src/javis_dmc/launch/: dmc_multi.launch.py  dmc_single.launch.py  dmc_test.launch.py
javis_ros2/src/javis_dmc/test/: test_battery_manager.py  test_interfaces.py  vision_node.py
javis_ros2/src/javis_dmc/test_gui/: test_gui_node.py  test_gui_widget.py
javis_ros2/src/javis_interfaces/: CMakeLists.txt  package.xml
javis_ros2/src/javis_interfaces/action/: CleanSeat.action  PerformTask.action  PickupBook.action  ReshelvingBook.action
javis_ros2/src/javis_interfaces/action/arm/: CleanDesk.action  CollectReturnedBooks.action  DisposeTrash.action
javis_ros2/src/javis_interfaces/action/drive/: GuideNavigation.action
javis_ros2/src/javis_interfaces/action/kreacher/: PerformTask.action
javis_ros2/src/javis_interfaces/action/main/: PickupBook.action  ReshelvingBook.action
javis_ros2/src/javis_interfaces/javis_interfaces/: package.xml
javis_ros2/src/javis_interfaces/msg/: DobbyState.msg  Obstacles.msg  TrackingStatus.msg
javis_ros2/src/javis_interfaces/msg/ai/: ArucoDockingData.msg  DetectedObjects.msg  TrackingStatus.msg
javis_ros2/src/javis_interfaces/msg/main/: BookInfo.msg  BookPicupJson.msg  DobbyLocation.msg  DobbyState.msg  Location.msg  Scheduling.msg  StorageInfo.msg
javis_ros2/src/javis_interfaces/srv/: DriveControlCommand.srv
javis_ros2/src/javis_interfaces/srv/admin/: ForceTaskResult.srv  SetManualState.srv  SetRobotMode.srv
javis_ros2/src/javis_interfaces/srv/ai/: ChangeTrackingMode.srv  DetectTrash.srv  GetCoordinates.srv
javis_ros2/src/javis_interfaces/srv/arm/: ChangeArmPose.srv
javis_ros2/src/javis_interfaces/srv/control/: CreateUserGuide.srv
javis_ros2/src/javis_interfaces/srv/drive/: ChangeTrackingMode.srv  VerifyBookPosition.srv
javis_ros2/src/javis_interfaces/srv/gui/: QueryLocationInfo.srv  RequestGuidance.srv
javis_ros2/src/javis_interfaces/srv/test/: MyJson.srv
(+324 files in other folders)
