<?xml version="1.0"?>
<package format="3">
  <name>javis_dac</name>
  <version>0.0.1</version>
  <description>JAVIS DAC control node (rclpy)</description>
  <maintainer email="jetcobot@todo.todo">jetcobot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>javis_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
