<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>javis_dmc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jongbob1918@gmail.com">jongbob</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>javis_interfaces</exec_depend>
  <exec_depend>javis_dmc_test_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>pytest-cov</test_depend>
  <test_depend>pytest-mock</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
